k8s/products.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: products-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: products-api
spec:
  selector:
    app: products
  ports:
    - port: 80
      targetPort: 8080
