k8s/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-mvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: web-mvc:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web-mvc
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 8080
