k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ms-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: users.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-api
                port: 
                  number: 80
    - host: orders.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orders-api
                port: 
                  number: 80
    - host: products.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: products-api
                port: 
                  number: 80
    - host: auth.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port: 
                  number: 80
